# HIT

./: .dockerignore  .gitignore  Dockerfile  README.md  cabal.project  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-hit-cli.yml  ci-hit-web.yml  ci-hit.yml
hit/: .gitignore  README.md  hit.cabal
hit-cli/: .gitignore  README.md  hit-cli.cabal
hit-cli/src/: Main.hs
hit-web/: .gitignore  README.md  elm-land.json  elm.json  index.html  package-lock.json  package.json
hit-web/sass/: main.scss
hit-web/src/: Api.elm  Auth.elm  Effect.elm  Main.elm  Shared.elm  interop.ts
hit-web/src/Api/: Auth.elm  Goals.elm  Health.elm
hit-web/src/Components/: Button.elm  Goal.elm  Listing.elm  Navbar.elm
hit-web/src/Layouts/: Default.elm
hit-web/src/Pages/: Goals.elm  Health.elm  Home_.elm  Login.elm  Profile.elm  Signup.elm
hit-web/src/Shared/: Model.elm  Msg.elm
hit-web/static/: main.css  main.css.map
hit/app/: Main.hs
hit/src/: Habits.hs  Lib.hs  Types.hs
hit/src/HIT/: Api.hs  Crud.hs  DB.hs  Habits.hs  Handlers.hs  OpenApi.hs  Types.hs
hit/src/HIT/Api/: Auth.hs  Goals.hs  Habits.hs  Health.hs  Intentions.hs  Users.hs
hit/src/HIT/DB/: Goals.hs  Habits.hs  Init.hs  Intentions.hs  Schema.hs  Users.hs
hit/src/HIT/Handlers/: Goals.hs  Habits.hs  Intentions.hs  Users.hs
hit/src/HIT/Types/: Deadline.hs  Fraction.hs  Goal.hs  Habit.hs  Intention.hs  Interval.hs  Sort.hs  State.hs  UUID.hs  User.hs
hit/test/: ApiSpec.hs  EncodeDecode.hs  Main.hs
