cabal-version: 2.4
name:          hit-cli
version:       0.1.0.0
license:       MIT
author:
maintainer:
category:      CLI
build-type:    Simple
tested-with:   GHC ==9.12.2

executable hit
  main-is:          Main.hs
  other-modules:
  build-depends:
    , aeson                 >=2.2.3.0
    , base                  >=4.18
    , bytestring            >=0.11
    , http-client           >=0.7.19
    , http-types            >=0.12.4
    , optparse-applicative  >=0.18.1.0
    , text                  >=1.2

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -O2 -threaded
