cabal-version: 2.4
name:          hit
version:       0.1.0.0
license:       MIT
author:
maintainer:
category:      Web
build-type:    Simple

library
  exposed-modules:
    HIT.Api
    HIT.DB
    HIT.Habits
    HIT.Types
    HIT.Types.Deadline
    HIT.Types.Fraction
    HIT.Types.Goal
    HIT.Types.Habit
    HIT.Types.Intention
    HIT.Types.Interval
    HIT.Types.Sort
    HIT.Types.State
    HIT.Types.User

  build-depends:
    , aeson           >=2.0
    , base            >=4.14
    , bcrypt          >=0.0
    , beam-core       >=0.10
    , beam-sqlite     >=0.5
    , bytestring      >=0.11
    , containers      >=0.6
    , deriving-aeson  >=0.2
    , http-types      >=0.12
    , servant         >=0.19
    , servant-auth    >=0.4
    , servant-server  >=0.19
    , sqlite-simple   >=0.4
    , text            >=1.2
    , time            >=1.9
    , transformers    >=0.5
    , uuid            >=1.3
    , wai             >=3.2
    , wai-cors        >=0.2
    , warp            >=3.3

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -O2

executable hit-server
  main-is:          Main.hs
  other-modules:
  build-depends:
    , base            >=4.14
    , bcrypt          >=0.0
    , bytestring      >=0.11
    , hit
    , http-types      >=0.12
    , servant         >=0.19
    , servant-auth    >=0.4
    , servant-server  >=0.19
    , sqlite-simple   >=0.4
    , text            >=1.2
    , wai             >=3.2
    , wai-cors        >=0.2
    , warp            >=3.3

  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options:      -Wall -O2 -threaded

test-suite hit-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    EncodeDecode
  hs-source-dirs:   test
  build-depends:
    , aeson                 >=2.0
    , base                  >=4.14
    , bytestring            >=0.11
    , containers            >=0.7
    , hit
    , QuickCheck            >=2.14
    , quickcheck-instances  >=0.3
    , tasty                 >=1.4
    , tasty-quickcheck      >=0.10
    , text                  >=1.2
    , utf8-string           >=1.0
    , uuid                  >=1.3

  default-language: GHC2021
  ghc-options:      -Wall -O2